# Argus

./: .env.example  .gitignore  ANALYSIS.md  DESIGN_RECOMMENDATION.md  DESIGN_SEARCH_ARCHITECTURE.md  Makefile  README.md  README_EN.md  design.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  emit.py  graph.py  llm.py  model_router.py  routing.py  state.py  token_budget.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  auth.py  crawlergo_client.py  database.py  encryption.py  event_bus.py  exceptions.py  middleware.py  nats_client.py  page_content_extractor.py  param_discovery.py  param_existence_validator.py  playwright_manager.py  poc_sandbox_client.py  proxy_client.py  redis.py  security.py  user_action_handler.py  vuln_classifier.py
backend/app/models/: __init__.py  agent_execution.py  base.py  event.py  finding.py  llm_provider.py  report.py  task.py  user.py
backend/app/schemas/: __init__.py  agent.py  auth.py  common.py  event.py  finding.py  llm_provider.py  report.py  task.py
backend/app/services/: __init__.py  agent_runner.py  event_service.py  finding_service.py  report_service.py  task_service.py
backend/app/templates/: report_full.md  report_generic.md
backend/app/tools/: __init__.py  api_doc_parser.py  (+18 more)
backend/tests/: conftest.py  test_agents.py  test_model_timezone.py  test_schemas.py  test_tools.py
(+101 files in other folders)
